# adaptive_pecs_bot

./: .gitignore  README.md  pyproject.toml
src/: __main__.py  main.py
src/bot/: keyboards.py  middlewares.py
src/bot/handlers/: communication.py
src/core/: __init__.py  config.py  logger.py
src/database/: core.py  models.py
src/services/: adapter.py
