[project]
name = "adaptive-pecs-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.24.0",
    "aiosqlite>=0.22.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.45",
]
